# ger

./: .editorconfig  .env  .eslintrc.cjs  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/: Cargo.toml
backend/ger/: Cargo.toml
backend/ger-from-row/src/: lib.rs
backend/ger-from-row/tests/: simple_enum.rs  simple_struct.rs  simple_struct_with_rename.rs
backend/ger/src/: constants.rs  main.rs
backend/ger/src/openapi/: apidoc.rs  apikey_middleware.rs  require_apikey.rs  security_addon.rs
backend/ger/src/routes/: hello.rs  mod.rs
backend/ger/src/routes/auth/: mod.rs
backend/ger/src/routes/auth/students/: signup.rs
docker/rust/: Dockerfile
