[package]
name = "ger"
description = "reg spelled backwards"
version = "0.1.0"
edition = "2021"
authors = [
    "Bhattarapong Somwong <numbbutt34685@gmail.com>"
]
keywords = [
    "university",
    "registration",
    "registrar"
]

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls"] }
argon2 = "0.4.1"
deadpool-postgres = "0.10"
dotenvy = "0.15"
jsonwebtoken = { version = "8.2.0", features = ["use_pem"] }
rustls = "0.20"
rustls-pemfile = "1.0"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
tokio-postgres = "0.7"
utoipa = { version = "2.4.2", features = ["time", "actix_extras"] }
