[package]
name = "ger"
description = "reg spelled backwards"
version = "0.1.0"
edition = "2021"
authors = [
    "Bhattarapong Somwong <numbbutt34685@gmail.com>"
]
keywords = [
    "university",
    "registration",
    "registrar"
]

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls"] }
anyhow = "1"
argon2 = "0.4"
deadpool-postgres = "0.10"
derive_more = "0"
dotenvy = "0"
futures = "0.3"
ger-from-row = { path = "../ger-from-row" }
jsonwebtoken = { version = "8", features = ["use_pem"] }
lazy_static = "1"
rustls = "0.20"
rustls-pemfile = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["local-offset"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
utoipa = { version = "2", features = ["time", "actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
